# amigo_hardware

./: .gitignore  .travis.yml  CATKIN_IGNORE  CMakeLists.txt  README.md  amigohardware.launch  base_controller.ops  head_controller.ops  head_controller_new.ops  left_arm_controller.ops  package.xml  rgb_lights.ops  right_arm_controller.ops  soem.ops  spindle_controller.ops  test.ops
amigo_amplifier_enabler/: mainpage.dox  manifest.xml
amigo_amplifier_enabler/src/: amplifier_enabler.cpp
amigo_base_controller/: ROStopics.ops  base_ROStopics.ops  base_controller.ops  base_controller_and_supervisor.ops  base_controller_and_supervisor_and_reset.ops  base_controller_load.ops  base_controller_red.ops  base_controller_standby.ops  base_controller_start.ops  base_controller_stop.ops  base_controller_stop.ops.deprecated  base_controller_test.ops  base_controller_test2.ops  deploy.ops  diagnostics.ops  mainpage.dox  manifest.xml  start.launch  tue-manifest.xml
amigo_base_controller/identification/: .tb_history  base_identification.ops  base_identification2.launch  base_identification2.ops  measure_frf  test  test.ops
amigo_base_controller/scripts/: reset_odometry
amigo_base_controller/src/: BaseDiagnostics.cpp  BaseDiagnostics.hpp  BaseReset.cpp  BaseReset.hpp  BaseSafety.cpp  BaseSafety.hpp  BaseSupervisor.cpp  BaseSupervisor.hpp  BaseWheelReset.cpp  BaseWheelReset.hpp  PublishOdometry.cpp  PublishOdometry.hpp
amigo_controllers/: mainpage.dox  manifest.xml
amigo_controllers/nodes/: ControllerCommand.py
amigo_controllers/srv/: ControllerCommand.srv
amigo_etherCAT/: deploy.lua  hardware_ROStopics.ops  safesoem.ops  soem.lua  soem.ops  soem1.lua  soem2.lua  soemE.ops  soemE2.ops  soemtest.ops  test.ops  testTopics.ops  test_ethercat_arm.ops  test_soem.ops  wbcisfalse.ops  wbcistrue.ops
amigo_etherCAT/include/: soem_armEthercat.hpp
amigo_head_controller/: head_ROStopics.ops  head_controller.ops  head_controller_load.ops  head_controller_start.ops  head_controller_stop.ops  head_standalone.launch  mainpage.dox  manifest.xml  soem_head.ops
amigo_head_controller/src/: PanTiltController.cpp  PanTiltController.hpp  PanTiltControllerJointState.cpp  PanTiltControllerJointState.hpp  head_enabler.cpp  head_enabler.hpp
amigo_head_server/: mainpage.dox  manifest.xml  start.launch
amigo_head_server/action/: move_head.action
amigo_head_server/parameters/: parameters.yaml
amigo_head_server/src/: head_server.cpp  test_client.cpp
amigo_pera_controller/: all_etherCAT_hardware_trajectory.launch  arm_left_magdeburg.ops  com_left.ops  communication_left.ops  communication_right.ops  deploy_left.ops  deploy_right.ops  deploy_right_old.ops  deploy_right_old2.ops  elpera.ops  elpera.ops.backuptim  elpera_trajectory.ops  elpera_trajectory_actionlib.ops  elpera_trajectory_msg.ops  erpera.ops  erpera2.ops  erpera3.ops  erpera4.ops  erpera_maxtest.ops  erpera_trajectory.ops  erpera_trajectory_actionlib.ops  erperavelffw.ops  force_deploy_left.ops  force_deploy_right.ops  gripperhomingleft.ops  gripperhomingright.ops  hardware_ROStopics.ops  jtf_deploy_right.ops  launch_lpera_new_model.launch  launch_lpera_only.launch  launch_lpera_trajectoy.launch  launch_rpera_only.launch  left_arm_controller_red.ops  lpera.ops  lpera_ROStopics.ops  lpera_admittance.ops  lpera_new_model.ops  lpera_new_model_gripperff.ops  lpera_stop.ops  lpera_testing.ops  (+12 more)
amigo_pera_controller/src/: PERA_FF_Refgen.cpp  PERA_FF_Refgen.hpp  PERA_Feedforward.cpp  PERA_Feedforward.hpp  PERA_GravityCompensation.cpp  PERA_GravityCompensation.hpp  PERA_GripperControl.cpp  PERA_GripperControl.hpp  PERA_GripperControlE.cpp  PERA_GripperControlE.hpp  PERA_GripperControl_left.cpp  PERA_GripperControl_left.hpp  PERA_Homing.cpp  PERA_Homing.hpp  PERA_JTF_control.cpp  PERA_JTF_control.hpp  PERA_Supervisor.cpp  PERA_Supervisor.hpp  PERA_SupervisorE.cpp  PERA_SupervisorE.hpp  PERA_VectorConcatenate.cpp  PERA_VectorConcatenate.hpp  PERA_gripper_control.cpp  PERA_gripper_control.hpp  PERA_watchdog.cpp  PERA_watchdog.hpp  PeraControllers_Backup.cpp  PeraControllers_Backup.hpp  PlotData.cpp  PlotData.hpp  ReadArmJointsMsg.cpp  ReadArmJointsMsg.hpp  ReadArmJointsMsg2.cpp  ReadArmJointsMsg2.hpp  SensorTorques.cpp  SensorTorques.hpp  SensorTorques2.cpp  SensorTorques2.hpp  SensorTorquesE.cpp  SensorTorquesE.hpp  (+4 more)
amigo_redundancy_search/: mainpage.dox  manifest.xml  start.launch
amigo_spindle_controller/: ROStopics.ops  amigo_spindle_controller.launch  deploy.ops  deployement_configuration.xml.xacro  mainpage.dox  manifest.xml  reporting.cpf  run.sh  run_su.sh  spindle_ROStopics.ops  spindle_controller.ops  spindle_controller_dev.ops  spindle_controller_load.ops  spindle_controller_red.ops  spindle_controller_start.ops  spindle_controller_stop.ops  spindle_controller_wbc.ops  spindle_parameters.cpf  start_spindle_controller.launch  tue-manifest.xml
frf_measurement/: frf_one_wheel_floor.ops  identification.launch
include/: AX12_control_table.h  CalculateFFW.hpp  GripperControl.hpp  HeadEnabler.hpp  Homing.hpp  PanTiltController.hpp  PeraHoming.hpp  ReadSpindleSetpointJointState.hpp  SpindleHoming.hpp
launch/: all.launch  base.launch  base_controller.ops  ethercat.launch  head.launch  head_controller_old.ops  identification.launch  leftarm.launch  nopera.launch  right_arm_controller.ops  rightarm.launch  spindle.launch  spindle_controller.ops  test.launch  time_measurement.launch  trace_always.launch  whisker_testsetup.launch
ops/: base_controller.ops  base_controller_pos.ops  base_controller_vel.ops  head_controller.ops  left_arm_controller.ops  left_arm_controller_currentffw.ops  left_arm_controller_test.ops  rgb_lights.ops  right_arm_controller.ops  soem.ops  spindle_controller.ops  test2.ops  test3.ops  trace_always.ops  whisker_inputs.ops
src/: CalculateFFW.cpp  GripperControl.cpp  HeadEnabler.cpp  Homing.cpp  PanTiltController.cpp  PeraHoming.cpp  ReadSpindleSetpointJointState.cpp  SpindleHoming.cpp
velocity_control/: base_controller_vel.ops  base_controller_vel_odom.ops  reference.ops  trace_always.ops  vel_control.launch
(+46 files in other folders)
