<?xml version="1.0"?>
<package>
  <name>amigo_hardware</name>
  <version>0.0.0</version>
  <description>The amigo_hardware package</description>
  <maintainer email="J.J.M.Lunenburg@tue.nl">Janno Lunenburg</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ocl</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>rtt_rosdeployment</build_depend>
  <build_depend>rtt_ros_msgs</build_depend>
  <build_depend>rtt_rosnode</build_depend>
  <build_depend>amigo_ref_interpolator</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rtt_control_components</build_depend>
  <build_depend>rtt_diagnostic_msgs</build_depend>
  <build_depend>rtt_nav_msgs</build_depend>
  <build_depend>rtt_rosnode</build_depend>
  <build_depend>soem</build_depend>
  <build_depend>soem_master</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rtt_sensor_msgs</build_depend>
  <build_depend>tue_ethercat_drivers</build_depend>s
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rtt_std_msgs</build_depend>
  <run_depend>ocl</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>rtt_rosdeployment</run_depend>
  <run_depend>rtt_ros_msgs</run_depend>
  <run_depend>rtt_rosnode</run_depend>
  <run_depend>amigo_ref_interpolator</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rtt_control_components</run_depend>
  <run_depend>rtt_diagnostic_msgs</run_depend>
  <run_depend>rtt_nav_msgs</run_depend>
  <run_depend>rtt_rosnode</run_depend>
  <run_depend>soem</run_depend>
  <run_depend>soem_master</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rtt_sensor_msgs</run_depend>
  <run_depend>tue_ethercat_drivers</run_depend>  
  <run_depend>rtt_roscomm</run_depend>  
  <run_depend>std_msgs</run_depend>  
  <run_depend>rtt_std_msgs</run_depend>  
  <export>
    <rtt_ros>
	  <plugin_depend>rtt_rosnode</plugin_depend>
	  <plugin_depend>rtt_roscomm</plugin_depend>
	  <plugin_depend>rtt_std_msgs</plugin_depend>	
	  <plugin_depend>soem_master</plugin_depend>
	  <plugin_depend>soem_beckhoff_drivers</plugin_depend>
	  <plugin_depend>tue_ethercat_drivers</plugin_depend>
	  <plugin_depend>rtt_control_components</plugin_depend>
	  <plugin_depend>rtt_std_srvs</plugin_depend>
    </rtt_ros>
  </export>
</package>
